fix overflow

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -26,6 +26,10 @@
 body {
 	-webkit-text-size-adjust: 100%;
 	font-family: var(--font-regular);
+
+	@include media-mobile-only {
+		overflow: hidden;
+	}
 }
 
 a {
